k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: trialnamespace
  labels:
    app: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
